clean up Reflect, bump dependencies